# outlayer-cli

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: api.rs  config.rs  crypto.rs  lib.rs  main.rs  near.rs
src/commands/: about.rs  auth.rs  checks.rs  create.rs  deploy.rs  earnings.rs  keys.rs  logs.rs  mod.rs  projects.rs  run.rs  secrets.rs  status.rs  upload.rs  vault.rs  versions.rs
src/commands/test/: mod.rs  rpc_proxy.rs
templates/basic/: Cargo.toml
templates/basic/src/: main.rs
templates/contract/: Cargo.toml  build.sh
templates/contract/src/: main.rs
tests/integration/: common.rs  create.rs  full_flow.rs  keys.rs  logs.rs  main.rs  projects.rs  run.rs  secrets.rs  storage.rs
wit/: world.wit
