[package]
name = "outlayer-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for deploying, running, and managing OutLayer agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/out-layer/outlayer-cli"
homepage = "https://outlayer.ai"
keywords = ["near", "outlayer", "agents", "cli", "wasm"]
categories = ["command-line-utilities"]
readme = "README.md"
include = ["src/**/*", "templates/**/*", "Cargo.toml", "README.md", "LICENSE*"]

[lib]
name = "outlayer_cli"
path = "src/lib.rs"

[[bin]]
name = "outlayer"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (0.11 to match near crates)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# NEAR
near-jsonrpc-client = "0.13"
near-primitives = "0.26"
near-crypto = "0.26"
near-jsonrpc-primitives = "0.26"

# Crypto
chacha20poly1305 = "0.10"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
borsh = "1"

# OS keychain
keyring = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# TLS (vendored OpenSSL for cross-compilation)
openssl = { version = "0.10", features = ["vendored"] }

# Error handling
anyhow = "1"

# Utils
dirs = "5"
bs58 = "0.5.1"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
